[package]
name = "rust-study_old"
version = "0.1.0"
authors = ["Yuta Sakamaki <yuta_sakamaki@albert2005.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
